# roboticfluid

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run_tests.sh
include/: shared_struct.hpp
include/roboticfluid_cpp/: common.hpp  owner_v4.hpp
include/roboticfluid_cpp/rf_owner/: owner.hpp  owner_v2.hpp
include/roboticfluid_cpp/rf_owner/nested/: owner_v3.hpp
include/roboticfluid_cpp/rf_pet/: pet.hpp
include/roboticfluid_py/: __init__.pyi
include/roboticfluid_py/rf_owner/: __init__.pyi
include/roboticfluid_py/rf_pet/: __init__.pyi
poc/: CMakeLists.txt  test_compression_demo.py
poc/benchmark/: CMakeLists.txt  benchmark_results.csv  benchmark_results.json  benchmark_results.md  main.cpp  performance_analysis.py  pet.cxx  pet.h  pet.idl  pet.pb.cc  pet.pb.h  pet.proto  petPubSubTypes.cxx  petPubSubTypes.h  plot_results.py  plot_results_no_size.py  plot_results_performance_only.py  result  run.sh
poc/benchmark/cmake/: fastdds-generate.cmake
poc/include/roboticfluid_cpp/: common.hpp  owner_v4.hpp
poc/include/roboticfluid_cpp/rf_owner/: owner.hpp  owner_v2.hpp
poc/include/roboticfluid_cpp/rf_owner/nested/: owner_v3.hpp
poc/include/roboticfluid_cpp/rf_pet/: pet.hpp  pet_type.hpp
poc/include/roboticfluid_py/: __init__.pyi
poc/include/roboticfluid_py/rf_owner/: __init__.pyi
poc/include/roboticfluid_py/rf_owner/nested/: __init__.pyi
poc/include/roboticfluid_py/rf_pet/: __init__.pyi
poc/src/roboticfluid_cpp/: owner_v4.cpp
poc/src/roboticfluid_cpp/rf_owner/: owner.cpp  owner_v2.cpp
poc/src/roboticfluid_cpp/rf_owner/nested/: owner_v3.cpp
poc/src/roboticfluid_cpp/rf_pet/: pet.cpp
poc/src/roboticfluid_py/: __init__.py  owner_v4.cpp  rf_owner.cpp  rf_pet.cpp
poc/src/roboticfluid_py/rf_owner/: owner.cpp  owner_v2.cpp
poc/src/roboticfluid_py/rf_owner/nested/: owner_v3.cpp
poc/src/roboticfluid_py/rf_pet/: pet.cpp  pet_type.cpp
poc/tests/: basic_test.cpp  run_all_python_tests.sh  test_compression.cpp  test_dump_load.cpp  test_rf_owner.py  test_rf_pet.py
src/: owner_pybind.cpp  owner_v2_pybind.cpp  pet_pybind.cpp  pybind_module.cpp  shared_struct.cpp
src/rf_owner/: module.cpp  nested.cpp  owner.cpp  owner_v2.cpp
src/rf_owner/nested/: owner_v3.cpp
src/rf_pet/: module.cpp  pet.cpp
src/roboticfluid/: owner_v4.cpp
src/roboticfluid/rf_owner/: module.cpp  owner.cpp  owner_v2.cpp
src/roboticfluid/rf_pet/: pet.cpp
src/roboticfluid_cpp/: owner_v4.cpp
src/roboticfluid_cpp/rf_owner/: owner.cpp  owner_v2.cpp
src/roboticfluid_cpp/rf_owner/nested/: owner_v3.cpp
src/roboticfluid_cpp/rf_pet/: pet.cpp
src/roboticfluid_py/: owner_v4.cpp  rf_pet.cpp
src/roboticfluid_py/rf_owner/: nested.cpp  owner.cpp  owner_v2.cpp
src/roboticfluid_py/rf_owner/nested/: owner_v3.cpp
src/roboticfluid_py/rf_pet/: pet.cpp
src/roboticfluid_py/roboticfluid_py/: __init__.py
tests/: basic_test.cpp  basic_test.py  ipc_test_cpp.cpp  ipc_test_python.py  test_rf_owner.py
typings/: example.pyi  rf_owner.pyi  rf_pet.pyi
typings/rf_owner/: __init__.pyi
typings/rf_owner/nested/: __init__.pyi
typings/roboticfluid/rf_owner/: __init__.pyi
